--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,9 +1,9 @@
 <%= simple_form_for(@workout, html: {class: 'form-horizontal'}) do |f| %>
   <p>
-    <%= f.input :date_time, label: "Date & Time", input_html: { class: "form-control" } %> <br>
+    <%= f.input :date_time, label: "Date & Time" %> <br>
     <%= f.input :activity, collection: ['calisthenics', 'bike', 'hike','yoga', 'rest'] %>
     <%= f.input :location, label: "Location", input_html: { class: "form-control" } %>  <br>
-    <%= f.input :description, label: "Description", input_html: { class: "form-control" } %> 
+    <%= f.input :description, label: "Description", input_html: { class: "form-control" } %>
   </p>
   <p>
     <%= f.submit %>
