--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Create a New Workout</h1>
 <%= render 'form' %>
-<p><%= link_to 'Cancel', root_path  %></p>
+<p><%= link_to 'Cancel', root_path %> | <%= link_to 'Back', workouts_path %></p>
