Add Delete action to workout_controller
Also updated views with Delete button and worked on formatting but
there is some hitch with formatting the time on the index page I need to fix later.

On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
modified:   app/controllers/workouts_controller.rb
modified:   app/models/workout.rb
new file:   app/views/workouts/edit.html.erb
modified:   app/views/workouts/index.html.erb
modified:   app/views/workouts/show.html.erb
modified:   lib/templates/erb/scaffold/_form.html.erb
modified:   spec/factories/workouts.rb
modified:   spec/requests/workouts_spec.rb

--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,1 +1,8 @@
-<h1> Index page</h1>
+<h1>This Weeks Workout</h1>
+<% @workouts.each do |workout| %>
+  When: <%= workout.date_time %> <br/>
+  What: <%= workout.activity %> <br/>
+  Where: <%= workout.location %> <br/>
+  <%= workout.description %> <br/>
+  <hr/>
+<% end %>
