--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -3,3 +3,7 @@
 <p>Activity: <%= @workout.activity %></p>
 <p>Location: <%= @workout.location %></p>
 <p><%= @workout.description %></p>
+<p><%= link_to 'EDIT', edit_workout_path %> | 
+  <%= link_to 'DELETE', workout_path(@workout), method: :delete, 
+      data: {confirm: 'Are you sure you want to delete your workout?'} %> | 
+  <%= link_to 'BACK', workouts_path %></p>
