--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,9 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,600,300,800);
+
+h1,h2,h3,h4,h5,h6 {font-family: "Raleway";
+   font-weight: 400;
+   font-style: normal;
+   }
