Add User Model, Controller, Views and Specs
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
new file:   app/assets/images/funclub.jpg
modified:   app/assets/stylesheets/application.scss
new file:   app/controllers/users_controller.rb
new file:   app/models/user.rb
renamed:    app/assets/images/.keep -> app/views/users/_form.html.erb
new file:   app/views/users/edit.html.erb
new file:   app/views/users/index.html.erb
new file:   app/views/users/new.html.erb
new file:   app/views/users/show.html.erb
modified:   app/views/workouts/index.html.erb
modified:   config/routes.rb
new file:   db/migrate/20160309232618_create_users.rb
modified:   db/schema.rb
new file:   spec/factories/users.rb
new file:   spec/requests/users_spec.rb

--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
 <% @workouts.each do |workout| %>
   <div class="col-md-4">
-  <h3><%= link_to workout.date_time.strftime("%A, %B %d |  %I:%M %P"), workout %></h3>
+  <h4 style="font-weight: 600;"><%= link_to workout.date_time.strftime("%A, %B %d |  %I:%M %P"), workout %></h4>
   <h4><%= workout.activity %></h4>
   <h4><%= workout.location %></h4>
   <hr/>
