--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -2,7 +2,7 @@
   <p>
     <%= f.input :date_time, label: "Date & Time" %> <br>
     <%= f.input :activity, collection: ['calisthenics', 'bike', 'hike','yoga', 'rest'] %>
-    <%= f.input :location, label: "Location", input_html: { class: "form-control" } %>  <br>
+    <%= f.input :address, label: "Address", input_html: { class: "form-control" } %>  <br>
     <%= f.input :description, label: "Description", input_html: { class: "form-control" } %>
   </p>
   <p>
