Add Devise, Set up Navbar with Sign In, Up & Out
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
modified:   Gemfile
modified:   Gemfile.lock
new file:   app/assets/javascripts/users.coffee
new file:   app/assets/stylesheets/users.scss
new file:   app/controllers/users_controller.rb
modified:   app/controllers/workouts_controller.rb
new file:   app/helpers/users_helper.rb
new file:   app/models/user.rb
new file:   app/views/devise/confirmations/new.html.erb
new file:   app/views/devise/mailer/confirmation_instructions.html.erb
new file:   app/views/devise/mailer/password_change.html.erb
new file:   app/views/devise/mailer/reset_password_instructions.html.erb
new file:   app/views/devise/mailer/unlock_instructions.html.erb
new file:   app/views/devise/passwords/edit.html.erb
new file:   app/views/devise/passwords/new.html.erb
new file:   app/views/devise/registrations/edit.html.erb
new file:   app/views/devise/registrations/new.html.erb
new file:   app/views/devise/sessions/new.html.erb
new file:   app/views/devise/shared/_links.html.erb
new file:   app/views/devise/unlocks/new.html.erb
new file:   app/views/layouts/_navbar.html.erb
modified:   app/views/layouts/application.html.erb
new file:   app/views/users/create.html.erb
new file:   app/views/users/destroy.html.erb
new file:   app/views/users/edit.html.erb
new file:   app/views/users/index.html.erb
new file:   app/views/users/new.html.erb
new file:   app/views/users/show.html.erb
new file:   app/views/users/update.html.erb
modified:   app/views/workouts/index.html.erb
modified:   config/environments/development.rb
new file:   config/initializers/devise.rb
new file:   config/locales/devise.en.yml
modified:   config/routes.rb
new file:   db/migrate/20160313085335_create_users.rb
new file:   db/migrate/20160313085734_add_devise_to_users.rb
modified:   db/schema.rb
deleted:    spec/factories/users.rb
new file:   test/controllers/users_controller_test.rb
new file:   test/fac

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
+  <%= render 'layouts/navbar' %>
+  <div class='container'>
+<!--     <% if notice %><div class='alert alert-info'><%= notice %></div><% end %>
+    <% if notice %><div class='alert alert-warning'><%= alert %></div><% end %> -->
+
+    <% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>" style="width:300px; background:#CFDBC5">
+    <a href="#" data-dismiss="alert" class="close">×</a>
+    <ul>
+      <li>
+        <%= value %>
+      </li>
+    </ul>
+  </div>
+<% end %>
+
     <%= yield %>
   </div>
 </body>
