--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,12 +1,6 @@
-<h2>Calisthenic Fun Club - This Weeks Workout</h2>
+<h3>This Weeks Workout</h3>
 <h4 class='btn'><%= button_to 'NEW WORKOUT', new_workout_path, method: :get, class:' btn btn-success' %></h4>
 
-<%= form_tag workouts_path, :method => :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search Near", :name => nil %>
-  </p>
-<% end %>
 <hr/ style="border-top: 4px double #FF1493; ">
 
 <div class="row">
